...
) {
    if (show) {
        AlertDialog(
            onDismissRequest = onDismiss,
            confirmButton = {
                TextButton(onClick = onConfirm) {
                    Text("Confirm")
                }
            },
            dismissButton = {
                TextButton(onClick = onDismiss) {
                    Text("Decline", color = MaterialTheme.colorScheme.error)
                }
            },
            title = {
                Text(text = "Confirmation")
            },
            text = {
...
