...
fun FavoritesScreen(viewModel: FavoriteViewModel, onMovieClick: (FavoriteMovie) -> Unit, onBack: () -> Unit) {

    val favorites by viewModel.favoriteMovies.collectAsState()
    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Favourite Movies") },
                navigationIcon = {
                    IconButton(onClick = onBack) {
                        Icon(
                            imageVector = Icons.AutoMirrored.Filled.ArrowLeft,
                            contentDescription = "Return"
                        )
...
                modifier = Modifier
                    .fillMaxSize()
                    .padding(padding),
                contentAlignment = Alignment.Center
            ) {
                Text(
                    text = "No movie has been added to the list.",
                    style = MaterialTheme.typography.bodyLarge
                )
            }
        } else {
            LazyVerticalGrid(
                columns = GridCells.Adaptive(minSize = 150.dp),
...
